--- a/src/app/home/schema-utils/state-model/state-model.component.scss
+++ b/src/app/home/schema-utils/state-model/state-model.component.scss
@@ -16,48 +16,6 @@
   }
 }
 
-#configureStateModel {
-  background: #525252;
-  border-radius: 0px 2px 2px 0px;
-  color: #f9f9f9;
-  border: none;
-  font-size: 12px;
-  outline: none;
-}
-
-.create-state-model {
-  .selector-dropdown {
-    min-width: 30%;
-    max-width: 30%;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
-    top: 30px;
-    left: 0px;
-    margin-bottom: 30px;
-    z-index: 10;
-    .selector-list {
-      max-height: 144px;
-      overflow-y: auto;
-      .selector-list-item {
-        min-height: 36px;
-        max-height: 36px;
-        .border-circle {
-          width: 16px;
-          height: 16px;
-          line-height: 13px;
-          padding-left: 1px;
-          text-align: center;
-          margin: 5px 5px 5px 0px;
-          border: 1px solid black;
-          border-radius: 100%;
-        }
-        &:hover {
-          background: $light;
-        }
-      }
-    }
-  }
-}
-
 .state-model-desc {
   max-width: 500px;
   min-width: 500px;
@@ -65,21 +23,55 @@
   min-height: 34px;
 }
 
-#select-state-model {
-  width: 30%;
-  input {
-    border-top-right-radius: 0 !important;
-    border-bottom-right-radius: 0 !important;
+.create-state-model {
+  #select-state-model {
+    width: 30%;
+    input {
+      border-top-right-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
+    }
+    ngb-typeahead-window {
+      width: 100%;
+      button {
+        justify-content: space-between;
+        display: flex;
+        &:hover,
+        &.active {
+          .border-circle {
+            border: 1px solid white;
+          }
+        }
+      }
+    }
   }
-}
 
-#stateModelInfo {
-  margin-top: 8px;
-  span {
-    background: #dedede;
-    border-radius: 2px;
-    padding: 1.1px 3.1px;
-    font-size: 10px;
+  .border-circle {
+    width: 16px;
+    height: 16px;
+    line-height: 13px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 100%;
+    margin-top: 1px;
+  }
+
+  #configureStateModel {
+    background: #525252;
+    border-radius: 0px 2px 2px 0px;
+    color: #f9f9f9;
+    border: none;
+    font-size: 12px;
+    outline: none;
+  }
+
+  #stateModelInfo {
+    margin-top: 8px;
+    span {
+      background: #dedede;
+      border-radius: 2px;
+      padding: 1.1px 3.1px;
+      font-size: 10px;
+    }
   }
 }
 
