--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -260,6 +260,16 @@
                     </div>
                     <span *ngIf="insightRoute.isActive" class="fa fa-angle-right mr-3"></span>
                 </div>
+                <div *ngIf="hasDataServicePermission"
+                    class="icon-block hover d-flex align-items-center justify-content-between my-2" id="apis" (click)="openAPIsWindow()"
+                    (mouseover)="hover.api = true" (mouseleave)="hover.api = false">
+                    <div class="d-flex align-items-center ml-1">
+                        <!-- <odp-api-icon class="mx-2 " [color]="hover.api?'0082C9':'222'" size="18"
+                            [active]="apiRoute.isActive"></odp-api-icon> -->
+                        <span class="fa fa-external-link-alt mx-2" [style.color]="hover.api?'#0082C9':'#222'"></span>
+                        <span class="text" [ngClass]="{'text-accent':hover.api}">APIs</span>
+                    </div>
+                </div>
             </ng-container>
             <!-- <div class="icon-block hover d-flex align-items-center" id="spacer"></div> -->
         </div>
