group members view permission

--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.html
@@ -58,7 +58,8 @@
           hasPermission('PMGMUC') ||
           hasPermission('PVGMUD') ||
           hasPermission('PVGMUC') ||
-          hasPermission('PVGB')
+          hasPermission('PVGB') || 
+          hasPermission('PVGMU')
         "
       >
         <ag-grid-angular
