--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
@@ -4,102 +4,108 @@
     <div class="text-secondary mt-2">Processing...</div>
   </div>
 </div>
-<div class="d-flex flex-column justify-content-center py-3">
-  <div class="d-flex align-items-center border-bottom pb-3">
-    <span class="fa fa-shield-alt mr-2"></span>
-    <span class="font-weight-bold">Data Service Access Settings</span>
+<div class="d-flex flex-column justify-content-center py-4">
+  <div class="d-flex align-items-center">
+    <span class="font-weight-bold">Data Services</span>
   </div>
-  <div class="role-list align-self-center pt-2">
-    <ng-container *ngFor="let srvc of serviceList; let srvcIndex = index">
-      <div class="role-list-item d-flex flex-column border border-border"
-        [ngClass]="{'selected rounded':toggleAccordion[srvcIndex]}">
-        <div class="role-list-item-head d-flex justify-content-between align-items-center px-3 hover"
-          [ngClass]="{'bg-light':toggleAccordion[srvcIndex]}"
-          (click)="collapseAccordion();toggleAccordion[srvcIndex] = true">
-          <div class="name">
-            <span class="odp-entities fa-sm mr-2"></span>
-            <span class="text">{{ srvc.entityName }}</span>
-          </div>
-          <span class="permissions d-flex align-items-center text-muted">
-            <ng-container
-              *ngIf="aggregatePermission[srvc.entity] && aggregatePermission[srvc.entity]['total'] === 'manage'">
-              <span class="d-flex align-items-center justify-content-center icon odp-manager text-primary"></span>
-              <span class="d-flex align-items-center justify-content-center fa fa-angle-right text-muted"></span>
-              <span class="d-flex align-items-center justify-content-center icon fa fa-plus-circle text-accent"
-                *ngIf="aggregatePermission[srvc.entity]['POST']"></span>
-              <span class="d-flex align-items-center justify-content-center icon odp-edit text-primary"
-                *ngIf="aggregatePermission[srvc.entity]['PUT']"></span>
-              <span class="d-flex align-items-center justify-content-center icon odp-delete text-danger"
-                *ngIf="aggregatePermission[srvc.entity]['DELETE']"></span>
-              <span class="d-flex align-items-center justify-content-center icon odp-approver text-info"
-                *ngIf="aggregatePermission[srvc.entity]['REVIEW']"></span>
-              <span class="d-flex align-items-center justify-content-center icon fa fa-forward text-success"
-                *ngIf="aggregatePermission[srvc.entity]['SKIP_REVIEW']"></span>
-            </ng-container>
-            <ng-container
-              *ngIf="aggregatePermission[srvc.entity] && aggregatePermission[srvc.entity]['total'] === 'view'">
-              <span class="d-flex align-items-center justify-content-center icon odp-view mr-1 text-accent"></span>
-              <span class="text text-accent">View Attributes</span>
-            </ng-container>
-            <ng-container
-              *ngIf="!aggregatePermission[srvc.entity] || aggregatePermission[srvc.entity]['total'] === 'no'">
-              <span class="fas fa-ban mr-2"></span>
-              <span class="text">No Access</span>
-            </ng-container>
-          </span>
-          <span class="toggle text-muted text-right">
-            <span *ngIf="toggleAccordion[srvcIndex]" class="fa fa-times"
-              (click)="$event.stopPropagation();toggleAccordion[srvcIndex] = false"></span>
-            <span *ngIf="!toggleAccordion[srvcIndex]" class="fa fa-angle-down"></span>
-          </span>
-        </div>
-        <div class="role-list-item-body bg-white font-sm" *ngIf="toggleAccordion[srvcIndex]">
-          <ng-container *ngFor="let role of srvc.roles; let roleIndex = index">
-            <div class="role-list-sub-item d-flex justify-content-between align-items-center px-3">
-              <div class="name">
-                <span *ngIf="hasManage(role)" class="odp-manager text-primary fa-sm mr-2"></span>
-                <span *ngIf="!hasManage(role)" class="odp-view text-success fa-sm mr-2"></span>
-                <span class="text">{{ role.name }}</span>
-              </div>
-              <span class="permissions d-flex align-items-center text-muted">
-                <ng-container *ngIf="hasManage(role)">
-                  <span class="d-flex align-items-center justify-content-center icon odp-manager text-primary"></span>
-                  <span class="d-flex align-items-center justify-content-center fa fa-angle-right text-muted"></span>
-                  <span class="d-flex align-items-center justify-content-center icon fa fa-plus-circle text-accent"
-                    *ngIf="hasMethod(role,'POST')"></span>
-                  <span class="d-flex align-items-center justify-content-center icon odp-edit text-primary"
-                    *ngIf="hasMethod(role,'PUT')"></span>
-                  <span class="d-flex align-items-center justify-content-center icon odp-delete text-danger"
-                    *ngIf="hasMethod(role,'DELETE')"></span>
-                  <span class="d-flex align-items-center justify-content-center icon odp-approver text-info"
-                    *ngIf="hasMethod(role,'REVIEW')"></span>
-                  <span class="d-flex align-items-center justify-content-center icon fa fa-forward text-success"
-                    *ngIf="hasMethod(role,'SKIP_REVIEW')"></span>
-                </ng-container>
-                <ng-container *ngIf="!hasManage(role)">
-                  <span class="d-flex align-items-center justify-content-center icon odp-view mr-1 text-accent"></span>
-                  <span class="text text-accent">View Attributes</span>
-                </ng-container>
-              </span>
-              <span class="toggle">
-                <label class="switch accent mb-0 mr-3 mt-1" [attr.for]="role.id" *ngIf="hasPermission('PMGCDS')">
-                  <input type="checkbox" value="true" [attr.id]="role.id" (change)="toggleRole($event,role,srvc)"
-                    [ngModel]="roleActive(role)">
-                  <span class="slider"></span>
-                  <span class="toggler border-border"></span>
-                </label>
-                <span class="text ml-2">
-                  <ng-container *ngIf="roleActive(role)">Yes</ng-container>
-                  <ng-container *ngIf="!roleActive(role)">No</ng-container>
-                </span>
-              </span>
-            </div>
-          </ng-container>
-        </div>
+  <div class='mt-4 rounded b data-services-section d-flex' *ngIf="!showLazyLoader">
+    <div class="select-ds d-flex flex-column pt-3">
+      <div class='ds-name py-2 px-4 hover' *ngFor="let srvc of serviceList; let srvcIndex = index"
+        (click)='selectDataService(srvc)'>
+        <span [ngClass]='{"text-accent": selectedDS == srvc}'>
+          {{ srvc.entityName }}
+        </span>
       </div>
-    </ng-container>
-    <ng-container *ngIf="(!serviceList || serviceList.length==0) && !showLazyLoader">
-      <p class="text-center font-weight-bold text-muted">No Data Services</p>
-    </ng-container>
+
+    </div>
+    <div class='ds-details py-4 w-100 pr-4'>
+      <div class='d-flex justify-content-between'>
+        <div class='font-weight-bold mb-2'>Roles ({{selectedDS.roles.length}})</div>
+        <div>{{totalActiveRoles}} roles enabled</div>
+      </div>
+      <div class="role-list-item-body bg-white font-normal b rounded mt-3">
+        <ng-container *ngFor="let role of selectedDS.roles; let roleIndex = index">
+          <div class="role-list-sub-item d-flex justify-content-between align-items-center px-4 b-bottom">
+            <div class="name">
+              <span *ngIf="hasManage(role)" class="odp-manager text-primary mr-2"></span>
+              <span *ngIf="!hasManage(role)" class="odp-view text-success mr-2"></span>
+              <span class="text">{{ role.name }}</span>
+            </div>
+            <span class="permissions d-flex align-items-center text-muted ">
+              <ng-container *ngIf="hasManage(role)">
+                <span class="d-flex align-items-center justify-content-center icon odp-manager text-primary"></span>
+                <span class="d-flex align-items-center justify-content-center fa fa-angle-right text-muted"></span>
+                <span class="d-flex align-items-center justify-content-center icon fa fa-plus-circle text-accent"
+                  *ngIf="hasMethod(role,'POST')"></span>
+                <span class="d-flex align-items-center justify-content-center icon odp-edit text-primary"
+                  *ngIf="hasMethod(role,'PUT')"></span>
+                <span class="d-flex align-items-center justify-content-center icon odp-delete text-danger"
+                  *ngIf="hasMethod(role,'DELETE')"></span>
+                <span class="d-flex align-items-center justify-content-center icon odp-approver text-info"
+                  *ngIf="hasMethod(role,'REVIEW')"></span>
+                <span class="d-flex align-items-center justify-content-center icon fa fa-forward text-success"
+                  *ngIf="hasMethod(role,'SKIP_REVIEW')"></span>
+              </ng-container>
+              <ng-container *ngIf="!hasManage(role)">
+                <span class="d-flex align-items-center justify-content-center icon odp-view mr-1 text-accent"></span>
+                <span class="text text-accent">View Attributes</span>
+              </ng-container>
+            </span>
+            <span class="toggle font-sm">
+              <label class="switch accent mb-0 mr-3 mt-1" [attr.for]="role.id" *ngIf="hasPermission('PMGCDS')">
+                <input type="checkbox" value="true" [attr.id]="role.id" (change)="toggleRole($event,role,selectedDS)"
+                  [ngModel]="roleActive(role)">
+                <span class="slider"></span>
+                <span class="toggler border-border"></span>
+              </label>
+              <span class="text ml-2 font-normal">
+                <ng-container *ngIf="roleActive(role)">Yes</ng-container>
+                <ng-container *ngIf="!roleActive(role)">No</ng-container>
+              </span>
+            </span>
+          </div>
+        </ng-container>
+      </div>
+
+      <div class='mt-4'>
+        <div class="font-weight-bold">
+          Maker Checker
+        </div>
+        
+        <div class="text mt-4" *ngIf="makerCheckerData">{{makerCheckerName}}</div>
+        <!-- <odp-switch [edit]="{status:true}" [(checked)]="makerCheckerEnabled" ></odp-switch> -->
+      </div>
+
+      <div class="role-list-item-body bg-white font-normal b rounded mt-4" *ngIf="makerCheckerData">
+        <div class='steps-header b-bottom d-flex justify-content-between align-items-center text-muted px-4'>
+          <div>{{makerCheckerData.steps.length}} STEPS</div>
+          <div>4 APPROVALS</div>
+          <div></div>
+        </div>
+        <ng-container *ngFor="let step of makerCheckerData.steps; let roleIndex = index">
+          <div class="role-list-sub-item d-flex justify-content-between align-items-center px-4 b-bottom">
+            <div class="name">
+              <span class="text">{{ step.name }}</span>
+            </div>
+            <div class="permissions d-flex align-items-center">
+              {{step.approvals}}
+            </div>
+            <span class="toggle font-sm">
+              <label class="switch accent mb-0 mr-3 mt-1" [attr.for]="step.id" *ngIf="hasPermission('PMGCDS')">
+                <input type="checkbox" value="true" [attr.id]="step.id" (change)="toggleRole($event,step,selectedDS)"
+                  [ngModel]="roleActive(step)">
+                <span class="slider"></span>
+                <span class="toggler border-border"></span>
+              </label>
+              <span class="text ml-2 font-normal">
+                <ng-container *ngIf="roleActive(step)">Yes</ng-container>
+                <ng-container *ngIf="!roleActive(step)">No</ng-container>
+              </span>
+            </span>
+          </div>
+        </ng-container>
+      </div>
+
+    </div>
   </div>
 </div>
