removed name from maker checker

--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.scss
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.scss
@@ -38,10 +38,9 @@
     max-height: 40px;
   }
   .role-list-item-body {
-
-    .steps-header{
-        height: 32px;
-        background: #F9F9F9;
+    .steps-header {
+      height: 32px;
+      background: #f9f9f9;
     }
     .role-list-sub-item {
       min-height: 56px;
