--- a/src/app/home/insight/insight.component.html
+++ b/src/app/home/insight/insight.component.html
@@ -14,9 +14,9 @@
             <span>Users</span>
         </div>
         
-        <!-- <div class="text-dark px-3 py-2 hover" *ngIf="experimentalFeatures && hasUserPermission" (click)="activateTab(3)" [ngClass]="{'active':activeTab==3}">
+        <div class="text-dark px-3 py-2 hover" *ngIf="experimentalFeatures && hasUserPermission" (click)="activateTab(3)" [ngClass]="{'active':activeTab==3}">
             <span>Bots</span>
-        </div> -->
+        </div>
        
         <div class="text-dark px-3 py-2 hover" *ngIf="hasGroupsPermission "  (click)="activateTab(4)" [ngClass]="{'active':activeTab==4}">
             <span>Groups</span>
